--- a/src/pages/SurveyScreen.css
+++ b/src/pages/SurveyScreen.css
@@ -2,29 +2,24 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     text-align: center;
     padding: 20px;
     background-color: #f5f5f5;
   }
   
   .survey-card {
-    width: 90%;
-    max-width: 500px;
-    padding: 20px;
-    background: white;
-    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    background-color: black;
+    border-radius: 0px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   }
   
   .rounded-input {
     border-radius: 30px;
     margin-bottom: 15px;
-  }
-  
-  .rounded-button {
-    border-radius: 30px;
-    margin-top: 20px;
   }
   
   .survey-question {
@@ -36,4 +31,29 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-  }  
+  } 
+
+  .header-icon {
+    width: 72px;
+    height: 72px;
+    flex-shrink: 0;
+  }
+
+  .rounded-button {
+    border-radius: 30px;
+    margin-top: 20px;
+  }
+
+  .btn-next {
+    width: 174px;
+    height: 73px;
+    --border-radius: 41px;
+    --background: var(--BtnBG, linear-gradient(90deg, #EAD8F3 0%, #E5EDFF 100%));
+    --box-shadow: 0px 1.257px 1.257px 0px rgba(0, 0, 0, 0.25) inset;
+    color: #596AE3;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 96%; /* 18.105px */
+    letter-spacing: -1px;
+  }
