--- a/src/pages/WelcomeScreen.css
+++ b/src/pages/WelcomeScreen.css
@@ -1,40 +1,80 @@
+
+
+
 .welcome-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   text-align: center;
-  padding: 20px;
   background-color: #f5f5f5;
 }
 
 .welcome-card {
-  width: 90%;
-  max-width: 400px;
-  padding: 20px;
+  width: 100%;
+  /*max-width: 400px;*/
+  /*padding: 20px;*/
+  margin: 0px;
   text-align: center;
-  background: white;
+  
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.title {
+/*.title {
   font-size: 2rem;
   color: #007aff;
   font-weight: bold;
   margin-bottom: 10px;
-}
+}*/
 
 .description {
-  font-size: 1.1rem;
-  color: #333;
-  margin-bottom: 15px;
-  line-height: 1.4;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 22px;
+  text-align: center;
+  font-weight: 400px;
+  line-height: 128%;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+
+
+.grid-row-1 {
+  height: 40%; /* O usa flex: 1 para dividir proporcionalmente */
+  display: flex;
+  align-items: end;
+  text-align: center;
+  justify-content: center;
+  
+}
+
+.grid-row-2 {
+  height: 10%; /* O usa flex: 1 para dividir proporcionalmente */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-row-3 {
+  height: 30%; /* O usa flex: 1 para dividir proporcionalmente */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-row-4 {
+  height: 20%; /* O usa flex: 1 para dividir proporcionalmente */
+  display: flex;
+  align-items: end;
+  justify-content: center;
 }
 
 /* Ajustes para móviles */
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
   .slider-overlay {
     font-size: 0.9rem;
     width: 140px;
@@ -48,4 +88,4 @@
   .slider-arrow {
     font-size: 20px;
   }
-}
+}*/
