--- a/src/pages/SurveyScreen.css
+++ b/src/pages/SurveyScreen.css
@@ -1,12 +1,4 @@
-.survey-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    text-align: center;
-    padding: 20px;
-    background-color: #f5f5f5;
-  }
+
   
   .survey-card {
     width: 100%;
@@ -16,15 +8,33 @@
     border-radius: 0px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   }
+
+  .header-title-question {
+    text-align: justify;
+    padding-left: 25px;
+    align-content: center;
+  }
   
-  .rounded-input {
-    border-radius: 30px;
-    margin-bottom: 15px;
+  .custom-item {
+    border-radius: 10px;
+    margin-bottom: 10px;
+    --background: rgba(217, 217, 217, 0.06);
+  }
+
+  .custom-title-question {
+    color: #FFFFFF;
+    font-size: 30px !important;
+    font-weight: 700;
+    line-height: 30px;
   }
   
   .survey-question {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
+    color: #FFFFFF;
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 100%;
+    text-align: justify;
+    padding-bottom: 30px;
   }
   
   .survey-buttons {
@@ -48,7 +58,7 @@
     width: 174px;
     height: 73px;
     --border-radius: 41px;
-    --background: var(--BtnBG, linear-gradient(90deg, #EAD8F3 0%, #E5EDFF 100%));
+    --background: linear-gradient(90deg, #EAD8F3 0%, #E5EDFF 100%);
     --box-shadow: 0px 1.257px 1.257px 0px rgba(0, 0, 0, 0.25) inset;
     color: #596AE3;
     text-align: center;
@@ -56,4 +66,43 @@
     font-weight: 700;
     line-height: 96%; /* 18.105px */
     letter-spacing: -1px;
+  }
+
+  .btn-back {
+    width: 174px;
+    height: 73px;
+    --border-radius: 41px;
+    --background: rgba(255, 255, 255, 0.09);
+    --box-shadow: 0px 1.257px 1.257px 0px rgba(0, 0, 0, 0.25) inset;
+    border-radius: 41px;
+    color: #FFFFFF;
+    text-align: center;
+    border: 1px solid #F1F1F1;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 96%; /* 18.105px */
+    letter-spacing: -1px;
+  }
+
+  .custom-text-item {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 106%;
+  }
+
+  .custom-radio::part(container) {
+    border: 2px solid white;
+    background-color: transparent;
+  }
+
+  .custom-radio:hover::part(container) {
+    border-color: #8C99F8;
+  }
+
+  .custom-radio.ion-focused::part(container) {
+    box-shadow: 0 0 0 2px #8C99F8;
+  }
+  
+  .custom-radio::part(mark) {
+    background: #8C99F8; /* punto del radio cuando está seleccionado */
   }
