--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -21,6 +21,21 @@ ion-card-subtitle {
     color: #FFFFFF;
 }
 
+
+.custom-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    padding: 30px;
+    overflow: auto;
+  }
+
+  .scroll {
+    overflow: auto;
+  }
+
 .full-height-grid {
     height: 100vh;
     display: flex;
@@ -30,6 +45,17 @@ ion-card-subtitle {
   .col-center {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .col-right {
+    display: flex;
+    justify-content: right;
     align-items: center;
     height: 100%;
     padding-top: 0px;
@@ -53,7 +79,7 @@ ion-card-subtitle {
     margin-top: 0px;
     margin-bottom: 0px;
   }
-  
+
   .col-bottom {
     display: flex;
     justify-content: center;
@@ -62,8 +88,8 @@ ion-card-subtitle {
 
   .col-bottom-center {
     display: flex;
-    text-align: center;
-    vertical-align: bottom;
+    justify-content: end;
+    align-items: center;
   }
 
   .input-bordered {
@@ -79,6 +105,15 @@ ion-card-subtitle {
     text-align: center;
     font-weight: 400;
     line-height: normal;
+  }
+
+  .row-puntation {
+    padding-bottom: 10px;
+    padding-top: 25px;
+  }
+
+  .row-title {
+    padding-bottom: 10px;
   }
 
   .custom-label {
@@ -139,8 +174,237 @@ ion-card-subtitle {
     display: flex !important;
     flex-direction: column !important;
   }
+
+  ion-toggle {
+    contain: none;
+  }
+
+  ion-toggle::part(track) {
+    position: relative;
+    background: #8E91A1;
+    border-radius: 50px;
+    width: 65px;
+    height: 30px;
+    overflow: visible;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+  }
+
+  ion-toggle.toggle-checked::part(track) {
+    content: 'No';
+    color: white;
+    background: #8C99F8;
+    width: 65px;
+    height: 30px;
+    border-radius: 50px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+  }
+
   
   
-  /*ion-range::part(bar) {
-    width: 103%;
-  }*/
+  ion-toggle::part(handle) {
+    width: 25px;
+    height: 25px;
+    flex-shrink: 0;
+    background: linear-gradient(90deg, #EAD8F3 0%, #E5EDFF 100%);
+    box-shadow: 0px 1.257px 1.257px 0px rgba(0, 0, 0, 0.25) inset;
+    transform: translateX(4px);
+  }
+
+  ion-toggle.toggle-checked::part(handle) {
+    transform: translateX(-9px);
+    /*transform: translateY(2px);*/
+  }
+
+  
+  
+  .custom-toggle::part(track)::before {
+    content: 'No';
+    position: absolute;
+    left: auto;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: white;
+    pointer-events: none;
+    transition: opacity 0.2s ease;
+    opacity: 1;
+
+    color: #FFF;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: normal;
+
+  }
+  
+  .custom-toggle.toggle-checked::part(track)::before {
+    content: 'Yes';
+    left: 8px;
+    right: auto;
+    color: #FFF;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: normal;
+  }
+
+  .survey-card {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    background-color: black;
+    border-radius: 0px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .header-title {
+    text-align: left;
+    font-size: 37px;
+    font-weight: 700;
+    
+  }
+  
+  .custom-item {
+    border-radius: 10px;
+    margin-bottom: 10px;
+    --background: rgba(217, 217, 217, 0.06);
+  }
+
+  .custom-title-question {
+    color: #FFFFFF;
+    font-size: 30px !important;
+    font-weight: 700;
+    line-height: 30px;
+  }
+  
+  .survey-question {
+    color: #FFFFFF;
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 100%;
+    text-align: justify;
+    padding-bottom: 30px;
+  }
+  
+  .survey-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  } 
+
+  .header-icon {
+    width: 72px;
+    height: 72px;
+    flex-shrink: 0;
+  }
+
+  .rounded-button {
+    border-radius: 30px;
+    margin-top: 20px;
+  }
+
+  .btn-next {
+    width: 174px;
+    height: 73px;
+    --border-radius: 41px;
+    --background: linear-gradient(90deg, #EAD8F3 0%, #E5EDFF 100%);
+    --box-shadow: 0px 1.257px 1.257px 0px rgba(0, 0, 0, 0.25) inset;
+    color: #596AE3;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 96%; /* 18.105px */
+    letter-spacing: -1px;
+  }
+
+  .btn-back {
+    width: 174px;
+    height: 73px;
+    --border-radius: 41px;
+    --background: rgba(255, 255, 255, 0.09);
+    --box-shadow: 0px 1.257px 1.257px 0px rgba(0, 0, 0, 0.25) inset;
+    border-radius: 41px;
+    color: #FFFFFF;
+    text-align: center;
+    border: 1px solid #F1F1F1;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 96%; /* 18.105px */
+    letter-spacing: -1px;
+  }
+
+  .custom-text-item {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 106%;
+  }
+
+  .custom-radio::part(container) {
+    border: 2px solid white;
+    background-color: transparent;
+  }
+
+  .custom-radio:hover::part(container) {
+    border-color: #8C99F8;
+  }
+
+  .custom-radio.ion-focused::part(container) {
+    box-shadow: 0 0 0 2px #8C99F8;
+  }
+  
+  .custom-radio::part(mark) {
+    background: #8C99F8; /* punto del radio cuando está seleccionado */
+  }
+
+  .title-header-result {
+    text-align: center;
+    font-size: 34px;
+    font-weight: 400;
+    line-height: 96%;
+    letter-spacing: -1px;
+    text-transform: capitalize;
+    color: #596AE3 !important;
+  }
+
+  .subtitle-header-result {
+    align-self: stretch;
+    text-align: center;
+    font-size: 130px;
+    font-weight: 900;
+    line-height: 96%;
+    text-transform: uppercase;
+    background: conic-gradient(
+        from 181deg at 98.68% 20%,
+         rgba(98, 132, 255, 0.60) 26deg, 
+         rgba(255, 114, 182, 0.60) 51deg, 
+         rgba(249, 229, 232, 0.60) 94deg, 
+         rgba(151, 225, 212, 0.60) 186deg
+         );
+    
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .subtitle-header-result-2 {
+    color: #596AE3;
+    text-align: center;
+    font-size: 28.288px;
+    font-weight: 700;
+    line-height: 96%; /* 27.157px */
+    text-transform: capitalize;
+  }
+
+  .text-result {
+    color: #5D638E;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 122%;
+  }
+
+.card-result {
+    height: 100%;
+    width: 100%;
+    border-radius: 35px;
+    padding: 0px;
+    margin: 0px;
+    background: linear-gradient(90deg, #EAD8F3 0%, #E5EDFF 100%);
+  }
