--- a/src/components/SliderButton.css
+++ b/src/components/SliderButton.css
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #596AE3;
+    color: rgb(89, 106, 227);
     border-color: #7A82B9;
     padding: 12px 20px;
     border-radius: 38px;
