--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -251,6 +251,9 @@ ion-card-subtitle {
   }
 
   .survey-card {
+
+    padding: 0px 20px 0px 20px;
+
     width: 100%;
     height: 100%;
     margin: 0px;
